src/test/deca/context/valid/pierre/objects/sameNameFieldAndVar.deca
class A {
    int a;
    int b;
    void test(float a) {
        float c = a;
        int b = 1;
        c = b + this.b;
        this.a = b;
    }
}
{}
        