src/test/deca/context/invalid/pierre/objects/callWrongSig.deca
class A {
    void a(int i) {}
}
{
    A a = new A();
    a.a();
}
